working json data, table layout

--- a/index.html
+++ b/index.html
@@ -11,17 +11,24 @@
     <head>
         <h1>ACD JOB TRACK</h1>
     </head>
+    <header>
+        <h1></h1>
+    </header>
     <div class="container">
-        <table id="datatable" border="1">
+        <table id="dataTable" border="1">
             <thead>
-                <tr>SOP</tr>
-                <tr>Written Up</tr>
-                <tr>Factory Issued</tr>
+                <tr>
+
+                    <th>SOP</th>
+                    <th>Written Up</th>
+                    <th>Factory Issued</th>
+                    <th>Dispatch Status</th>
+                </tr>
             </thead>
+            <tbody>
+                <!-- content to be generated here -->
+            </tbody>
         </table>
-        <tbody>
-            <!-- content to be generated here -->
-        </tbody>
     </div>
     <script src="scripts.js" ></script>    
 </body>
