functional stage with clickable link in table data

--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@
         <h1></h1>
     </header>
     <div class="container">
-        <table id="dataTable" border="1">
+        <table id="dataTable">
             <thead>
                 <tr>
-
                     <th>SOP</th>
                     <th>Written Up</th>
                     <th>Factory Issued</th>
