--- a/results.html
+++ b/results.html
@@ -4,8 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page results</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Page results</h1>
+    <header>
+        <h1>Page results</h1>
+        <a href="index.html">back to home</a>
+    </header>
+    <div class="container">
+        <div id="order-info">
+            <h2 id="sop-number">xxx</h2>
+            <div id="logs-container"><div class="container">
+                <table id="logTable">
+                    <thead>
+                        <tr>
+                            <th>USER</th>
+                            <th>AREA</th>
+                            <th>LINE</th>
+                            <th>START TIME</th>
+                            <th>END TIME</th>
+                            <th>DURATION</th>
+                            <th>STATUS</th>
+                            <th>NOTES</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <!-- content to be generated here -->
+                    </tbody>
+                </table>
+            </div></div>
+        </div>
+    </div>
+    <script src="scripts.js"></script>
 </body>
 </html>
