last location and factory complete in table

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
                     <th>SOP</th>
                     <th>Written Up</th>
                     <th>Factory Issued</th>
+                    <th>Factory Complete</th>
+                    <th>Last Location Scanned</th>
                     <th>Dispatch Status</th>
                 </tr>
             </thead>
