started on scanning. need node.js

--- a/index.html
+++ b/index.html
@@ -8,29 +8,8 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <head>
-        <h1>ACD JOB TRACK</h1>
-    </head>
-    <header>
-        <h1></h1>
-    </header>
-    <div class="container">
-        <table id="dataTable">
-            <thead>
-                <tr>
-                    <th>SOP</th>
-                    <th>Written Up</th>
-                    <th>Factory Issued</th>
-                    <th>Factory Complete</th>
-                    <th>Last Location Scanned</th>
-                    <th>Dispatch Status</th>
-                </tr>
-            </thead>
-            <tbody>
-                <!-- content to be generated here -->
-            </tbody>
-        </table>
-    </div>
-    <script src="scripts.js" ></script>    
+    <a href="JobList.html">Job List</a>
+    <a href="Scan.html">Job Scan</a>
+    
 </body>
 </html>
