--- a/results.html
+++ b/results.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Page results</h1>
-        <a href="index.html">back to home</a>
+        <a href="JobList.html">Back to List</a>
     </header>
     <div class="container">
         <div id="order-info">
