added simple counter

--- a/Scan.html
+++ b/Scan.html
@@ -17,6 +17,13 @@
             <button type="submit">Submit</button>
         </form>
         <div id="messageDiv"></div>
+        <button id="startTimer">START</button>
+        <div id="startTime"> </div>
+        
+        <button id="endTimer">END</button>
+        <div id="endTime"> </div>
+        <div id="duration"> </div>
+
     </div>
     <script src="scripts.js"></script>
 </body>
