working on file handeling

--- a/Scan.html
+++ b/Scan.html
@@ -23,6 +23,8 @@
         <button id="endTimer">END</button>
         <div id="endTime"> </div>
         <div id="duration"> </div>
+        <input type="file" name="fileInput" id="fileInput" accept=".json" style="display: none;">
+        <button id="overwriteBtn">SAVE</button>
 
     </div>
     <script src="scripts.js"></script>
