--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>HOME</h1>
     <a href="JobList.html">Job List</a>
     <a href="Scan.html">Job Scan</a>
-    
+    <p>*DEMONSTRATION PURPOSES ONLY*</p>
+    <p>*NO NETWORK SYSTEMS ARE USED IN THIS DEMONSTRATION*</p>
+    <p>*ALL ACTIONS ARE SAVED LOCALLY*</p>
+
 </body>
 </html>
