further style plus new order page

--- a/index.html
+++ b/index.html
@@ -5,12 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ACD Job Track</title>
-<link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="scanStyle.css">
+
 </head>
 <body>
-    <h1>HOME</h1>
-    <a href="JobList.html">Job List</a>
-    <a href="Scan.html">Job Scan</a>
+    <header>
+
+        <h1>HOME</h1>
+        <a class="btn dbg"href="Scan.html">Job Scan</a>
+        <a class="btn dbg"href="JobList.html">Job List</a>
+        <a class="btn dbg"href="newJob.html">New Job</a>
+
+    </header>
     <p>*DEMONSTRATION PURPOSES ONLY*</p>
     <p>*NO NETWORK SYSTEMS ARE USED IN THIS DEMONSTRATION*</p>
     <p>*ALL ACTIONS ARE SAVED LOCALLY*</p>
