--- a/results.html
+++ b/results.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page results</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="scanStyle.css">
 </head>
 <body>
     <header>
         <h1>Page results</h1>
-        <a href="JobList.html">Back to List</a>
+        <a href="JobList.html" class="btn dbg">Back to List</a>
     </header>
     <div class="container">
         <div id="order-info">
             <h2 id="sop-number">xxx</h2>
-            <div id="logs-container"><div class="container">
+            <div id="logs-container">
                 <table id="logTable">
                     <thead>
                         <tr>
@@ -32,7 +32,7 @@
                         <!-- content to be generated here -->
                     </tbody>
                 </table>
-            </div></div>
+            </div>
         </div>
     </div>
     <script src="scripts.js"></script>
