--- a/JobList.html
+++ b/JobList.html
@@ -5,16 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ACD Job Track</title>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="scanStyle.css">
 </head>
 <body>
-    <head>
-        <h1>ACD JOB TRACK</h1>
-        <a href="index.html">Home</a>
-    </head>
+    
     <header>
-        <h1></h1>
+        <h1>ACD JOB TRACK</h1>
+        <a href="index.html" class="btn dbg">Home</a>
+        
     </header>
+    <div class="search-container">
+        <input type="text" id="searchInput" placeholder="Search by SOP number...">
+    </div>
     <div class="container">
         <table id="dataTable">
             <thead>
@@ -31,6 +33,9 @@
                 <!-- content to be generated here -->
             </tbody>
         </table>
+        <div id="noResults" class="no-results" style="display: none;">
+            No jobs found matching your search.
+        </div>
     </div>
     <script src="scripts.js" ></script>    
 </body>
