Style and testing. clean scripts as well

--- a/index.html
+++ b/index.html
@@ -17,9 +17,12 @@
         <a class="btn dbg"href="newJob.html">New Job</a>
 
     </header>
-    <p>*DEMONSTRATION PURPOSES ONLY*</p>
-    <p>*NO NETWORK SYSTEMS ARE USED IN THIS DEMONSTRATION*</p>
-    <p>*ALL ACTIONS ARE SAVED LOCALLY*</p>
-
+    <div class="container">
+        <div>
+            <p>*DEMONSTRATION PURPOSES ONLY*</p>
+            <p>*NO NETWORK SYSTEMS ARE USED IN THIS DEMONSTRATION*</p>
+            <p>*ALL ACTIONS ARE SAVED LOCALLY*</p>
+        </div>
+    </div>
 </body>
 </html>
