--- a/newJob.html
+++ b/newJob.html
@@ -29,13 +29,13 @@
                 <label for="notesInput">Notes</label>
                 <textarea type="text" name="notesInput" id="notesInput" rows="3" col="4"></textarea>
             </div>
-            <div id="messageDiv" class="ow"></div>
-
+            
             <div class="formLine">
-
+                
                 <button type="submit" class="btn lbg">Submit</button>
                 <button id="exportBtn" class="btn lbg">Export to test.json</button>
             </div>
+            <div id="messageDiv" class="fw"></div>
             <input type="file" name="fileInput" id="fileInput" accept=".json" style="display: none;">
         </form>
     </div>
