--- a/Scan.html
+++ b/Scan.html
@@ -63,13 +63,13 @@
             </div>
             <div class="formLine">
                 <textarea type="text" name="notesInput" id="notesInput" rows="3" col="4"></textarea>
-                <div id="messageDiv" class="ow"></div>
             </div>
             <div class="formLine">
-
+                
                 <button type="submit" class="btn lbg">Submit</button>
                 <button id="exportBtn" class="btn lbg">Export to test.json</button>
             </div>
+            <div id="messageDiv" class="fw"></div>
             <input type="file" name="fileInput" id="fileInput" accept=".json" style="display: none;">
             
         </form>
