fixing last log values

--- a/JobList.html
+++ b/JobList.html
@@ -26,6 +26,7 @@
                     <th>Factory Issued</th>
                     <th>Factory Complete</th>
                     <th>Last Location Scanned</th>
+                    <th>Date</th>
                     <th>Dispatch Status</th>
                 </tr>
             </thead>
