--- a/results.html
+++ b/results.html
@@ -18,6 +18,7 @@
                 <table id="logTable">
                     <thead>
                         <tr>
+                            <th>DATE</th>
                             <th>USER</th>
                             <th>AREA</th>
                             <th>LINE</th>
