fixed list page sorting

--- a/Scan.html
+++ b/Scan.html
@@ -27,7 +27,7 @@
             </div>
             <div class="formLine">
                 <label for="location">AREA</label>
-                <input list="locations" id="location" name="location" onchange="updateOptions()" required/>
+                <input list="locations" id="location" name="location" required/>
                 <datalist id="locations">
                     <option value="OFFICE"></option>
                     <option value="FIRE-DOORS"></option>
