updated buttons in scan

--- a/Scan.html
+++ b/Scan.html
@@ -13,6 +13,8 @@
     </header>
     <section class="container">
         <form id="orderForm">
+            <input type="hidden" id="startBarcode" value="START-TIMER">
+            <input type="hidden" id="stopBarcode" value="STOP-TIMER">
             <div class="formLine">
                 <label for="sop">SOP</label>
                 <input type="number" id="sop" required>
