updated to include rating and other minor changes

--- a/JobList.html
+++ b/JobList.html
@@ -22,6 +22,7 @@
             <thead>
                 <tr>
                     <th>SOP</th>
+                    <th>RATING</th>
                     <th>Written Up</th>
                     <th>Factory Issued</th>
                     <th>Factory Complete</th>
