--- a/Scan.html
+++ b/Scan.html
@@ -20,11 +20,15 @@
                 <input type="number" id="sop" required>
             </div>
             <div class="formLine">
+                <label for="ratingSelect">RATING</label>
+                <input type="text" name="ratingSelect" id="ratingSelect" required/>
+            </div>
+            <div class="formLine">
                 <label for="user">USER</label>
                 <input type="text" id="user" required>
             </div>
             <div class="formLine">
-                <label for="lineSelect">Line</label>
+                <label for="lineSelect">LINE</label>
                 <input type="number" id="lineSelect" required>
             </div>
             <div class="formLine">
