--- a/newJob.html
+++ b/newJob.html
@@ -22,6 +22,13 @@
                 <input type="text" id="user" required>
             </div>
             <div class="formLine">
+                <label for="ratingSelect">RATING</label>
+                <select name="ratingSelect" id="ratingSelect">
+                    <option value="FIRE">Fire Door</option>
+                    <option value="FLUSH">Flush Panel</option>
+                </select>
+            </div>
+            <div class="formLine">
                 <label for="writtenUp">Written Up?</label>
                 <input type="checkbox" name="writtenUp" id="writtenUp" value="yes">
             </div>
