--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ACD Job Track</title>
+    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.6.0/uicons-solid-rounded/css/uicons-solid-rounded.css'>
+    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.6.0/uicons-solid-rounded/css/uicons-solid-rounded.css'>
+    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.6.0/uicons-solid-straight/css/uicons-solid-straight.css'>
     <link rel="stylesheet" href="scanStyle.css">
-
 </head>
 <body>
     <header>
@@ -17,12 +19,20 @@
         <a class="btn dbg"href="newJob.html">New Job</a>
 
     </header>
-    <div class="container">
-        <div>
-            <p>*DEMONSTRATION PURPOSES ONLY*</p>
-            <p>*NO NETWORK SYSTEMS ARE USED IN THIS DEMONSTRATION*</p>
-            <p>*ALL ACTIONS ARE SAVED LOCALLY*</p>
+    <div class="container dbg" lang="en">
+        <div class="box">
+            <i class="fi fi-sr-eye-crossed icon"></i>
+            <h4>No network systems are used in this demonstration</p>
         </div>
+        <div class="box">
+            <i class="fi fi-ss-users icon"></i>
+            <h3>Demonstration purposes only</p>
+        </div>
+        <div class="box">
+            <i class="fi fi-sr-folder icon"></i>
+            <h4>All actions are saved locally</p>
+        </div>
+        
     </div>
 </body>
 </html>
