--- a/JobList.html
+++ b/JobList.html
@@ -11,9 +11,28 @@
     
     <header>
         <h1>ACD JOB TRACK</h1>
-        <a href="index.html" class="btn dbg">Home</a>
+        <div class="buttons">
+            <a id="HOME" class="btn dbg"href="index.html">Home</a>
+            <a id="JOBSCAN" class="btn dbg"href="Scan.html">Job Scan</a>
+            <a id="JOBLIST" class="btn dbg"href="JobList.html">Job List</a>
+            <a id="NEWJOB" class="btn dbg"href="newJob.html">New Job</a>
+        </div>
         
     </header>
+    <form class="userSelect">
+        <div class="userRadio">
+            <input type="radio" name="userSelect" id="AdminSelect" value="Admin">
+            <p>Admin</p>
+        </div> 
+        <div class="userRadio">
+            <input type="radio" name="userSelect" id="OfficeSelect" value="Office">
+            <p>Office</p>
+        </div>
+        <div class="userRadio">
+            <input type="radio" name="userSelect" id="FactorySelect" value="Factory">
+            <p>Factory</p>
+        </div>    
+    </form>
     <div class="search-container">
         <input type="text" id="searchInput" placeholder="Search by SOP number...">
     </div>
