--- a/JobList.html
+++ b/JobList.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ACD Job Track</title>
-<link rel="stylesheet" href="scanStyle.css">
+<link rel="stylesheet" href="./scanStyle.css">
 </head>
 <body>
     
@@ -58,6 +58,6 @@
             No jobs found matching your search.
         </div>
     </div>
-    <script src="scripts.js" ></script>    
+    <script src="./scripts.js" ></script>    
 </body>
 </html>
