--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.6.0/uicons-solid-rounded/css/uicons-solid-rounded.css'>
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.6.0/uicons-solid-rounded/css/uicons-solid-rounded.css'>
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.6.0/uicons-solid-straight/css/uicons-solid-straight.css'>
-    <link rel="stylesheet" href="scanStyle.css">
-    <script src="scripts.js"></script>
+    <link rel="stylesheet" href="./scanStyle.css">
+    <script src="./scripts.js"></script>
 </head>
 <body>
     <header>
