--- a/results.html
+++ b/results.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page results</title>
-    <link rel="stylesheet" href="scanStyle.css">
+    <link rel="stylesheet" href="./scanStyle.css">
 </head>
 <body>
     <header>
@@ -58,6 +58,6 @@
             </div>
         </div>
     </div>
-    <script src="scripts.js"></script>
+    <script src="./scripts.js"></script>
 </body>
 </html>
